--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -9,29 +9,31 @@
     <div class="box-border border-b border-gray-400 h-16 flex justify-between items-center">
       <p class="font-bold">#<%=  @channel.try(:name) || @directmsg_user_name %></p>
         <%# button %>  
-      <% if @channel %>
-        <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none text-lg">
-          <i class="fas fa-user-plus text-gray-600" ></i>
-        </button>
-      <% end %>
-      <div class="profile pr-2 col-span-1 ml-auto">
-        <div class="clickopen relative">
-          <span class="rounded-md shadow-sm">
-            <%= image_tag (current_user.profile.try(:avatar_url,(:small)) || 'https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32'),class:"leading-5 transition ease-in-out duration-150 avatar_small w-10 h-10","aria-haspopup": true,"aria-expanded": true,id: "options-menu" %> 
-          </span>
-        </div>
-        <div class="open mt-2 w-56 rounded-md shadow-lg hidden absolute right-0 z-40">
-          <div class="rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"   aria-labelledby="options-menu">
-            <div class="pl-2 py-1 flex">
-              <%= image_tag current_user.profile.try(:avatar_url,(:small)) || "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"leading-5 transition ease-in-out duration-150 avatar_small w-10 h-10","aria-haspopup": true,"aria-expanded": true %> 
-              <a href="#" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900 w-full" role="menuitem">
-                <%= t(".status") %>
-              </a>
+      <div class="btn-group flex">
+        <% if @channel %>
+          <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none text-lg">
+            <i class="fas fa-user-plus text-gray-600" ></i>
+          </button>
+        <% end %>
+        <div class="profile pr-2 col-span-1 ml-auto">
+          <div class="clickopen relative">
+            <span class="rounded-md shadow-sm">
+              <%= image_tag (current_user.profile.try(:avatar_url,(:small)) || 'https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32'),class:"leading-5 transition ease-in-out duration-150 avatar_small w-10 h-10","aria-haspopup": true,"aria-expanded": true,id: "options-menu" %> 
+            </span>
+          </div>
+          <div class="open mt-2 w-56 rounded-md shadow-lg hidden absolute right-0 z-40">
+            <div class="rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"   aria-labelledby="options-menu">
+              <div class="pl-2 py-1 flex">
+                <%= image_tag current_user.profile.try(:avatar_url,(:small)) || "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"leading-5 transition ease-in-out duration-150 avatar_small w-10 h-10","aria-haspopup": true,"aria-expanded": true %> 
+                <a href="#" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900 w-full" role="menuitem">
+                  <%= t(".status") %>
+                </a>
+              </div>
+              <div class="border-t border-gray-100"></div>
+              <button class= "edit_profile block w-full px-4 py-3 text-sm text-left leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem"> <%= t(".edit") %></button>
+              <div class="border-t border-gray-100"></div>
+              <%= link_to t(".sign_out"), destroy_user_session_path, method: "DELETE", class: "block px-4 py-3 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900 sign-out",role: "menuitem" %>
             </div>
-            <div class="border-t border-gray-100"></div>
-            <button class= "edit_profile block w-full px-4 py-3 text-sm text-left leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem"> <%= t(".edit") %></button>
-            <div class="border-t border-gray-100"></div>
-            <%= link_to t(".sign_out"), destroy_user_session_path, method: "DELETE", class: "block px-4 py-3 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900 sign-out",role: "menuitem" %>
           </div>
         </div>
       </div>
