--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -1,5 +1,5 @@
 <%# 右方資訊區 %>
-<div class="info right_info hidden w-1/4 min-w-200 border-l border-gray-400">
+<div class="info right_info hidden w-1/4 min-w-200 border-l border-gray-400 bg-transparent">
   <% if @thread %>
     <div class="box-border border-b border-gray-400 h-16 thread-header">
       <div class="thread-title ml-2">
@@ -28,7 +28,7 @@
         <% end %>
       </div>
 
-      <div class="thread-form">
+      <div class="thread-form z-40">
         <% if @thread.messageable_type == "Channel" %>
           <%= render 'threads/threadform' %>
         <% else %>
